Bug 76402 - EDITING Option Expand References does not work
Summary: EDITING Option Expand References does not work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha1
Hardware: Other All
: high major
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.3.0 target:4.2.4
Keywords: regression
: 76548 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-03-20 13:49 UTC by Cor Nouws
Modified: 2014-03-30 23:52 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2014-03-20 13:49:48 UTC
1. Add named range "Test" for A1:A4 in spreadsheet
2. Go to Tools > References > LibreOffice Calc > General
3. Check "Expand references when new columns/rows are inserted"
4. Go to document and put cursor in row 5
5. Insert new row
6. Check named range "Test"
  > Still points to A1:A4

Should point to A1:A5

(found while working in 4.2.3.1 - should check which version first shows thus bug)
Comment 1 Cor Nouws 2014-03-20 15:26:23 UTC
first version that I have that shows the bug is 4.2.0 alpha1
Comment 2 Cor Nouws 2014-03-24 12:57:58 UTC
*** Bug 76548 has been marked as a duplicate of this bug. ***
Comment 3 Kohei Yoshida 2014-03-25 13:14:06 UTC
Cor,

Just to make sure about one thing, does the range defined in your named range absolute reference of relative?  What exact reference do you see in the named range manager dialog?  Is it $A$1:$A$4 or A1:A4?
Comment 4 Kohei Yoshida 2014-03-25 13:15:38 UTC
I can handle the absolute reference case, but not of the reference in a named range is relative.  But I think in most cases these references are absolute...
Comment 5 Kohei Yoshida 2014-03-25 13:17:29 UTC
And it will also depend on how you add a named range.  If you use the name box to set a named range, it will become absolute reference i.e. with $ next to each column / row address.
Comment 6 Kohei Yoshida 2014-03-25 14:51:45 UTC
I'll take it.
Comment 7 Commit Notification 2014-03-25 16:44:11 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a603ddf9adef4373940936f785e918a8c0ea560b

fdo#76402: Write unit test for this first.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-03-25 16:44:24 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8582db191b5c88c72e5b16c89a024f897a95a6f1

fdo#76402: Handle range reference expansion in named ranges.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Kohei Yoshida 2014-03-25 16:45:54 UTC
4.2 backport request: https://gerrit.libreoffice.org/8751
Comment 10 Commit Notification 2014-03-26 22:23:17 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=96ef8a7a03c7b098c71f7ce8540fb61d13eaa298&h=libreoffice-4-2

fdo#76402: Handle range reference expansion in named ranges.


It will be available in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Kohei Yoshida 2014-03-27 01:35:15 UTC
Fixed. Yay. \(^o^)/
Comment 12 Michael Meeks 2014-03-27 10:10:59 UTC
On Thu, 2014-03-27 at 01:35 +0000, wrote:
> Comment # 11 on bug 76402 from Kohei Yoshida 
> Fixed. Yay. \(^o^)/
> 
> ______________________________________________________________________
	Thanks =)

	Love the ascii art.

	ATB,

		Michael.
Comment 13 Cor Nouws 2014-03-30 23:52:07 UTC
(In reply to comment #11)
> Fixed. Yay. \(^o^)/

:) thanks & sorry that I dod not yet look in your question in comment #3 - but since I saw commits flowing in... ;)