fdo#76402: Write unit test for this first.

Change-Id: Ib4fccb0e29d4a21a211de4af2cdeaf956f9b9cc6